# pdf-ocr-compress

./: .dockerignore  .gitattributes  .gitignore  API_EXAMPLES.md  BENCHMARKS.md  CLAUDE.md  Dockerfile  LICENSE  N8N_BATCH_WORKFLOW.md  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  requirements.txt  start_services.sh  system_installs.txt
.github/: CLAUDE.md
.github/workflows/: ci.yml
docs/: API.md
docs/superpowers/plans/: 2026-04-29-phase-3-batch.md  2026-04-29-phase-5-gui-catchup.md  2026-04-29-phase-6-docs-polish.md
docs/superpowers/specs/: 2026-04-29-phase-3-batch-design.md  2026-04-29-phase-5-gui-catchup-design.md  2026-04-29-phase-6-docs-design.md
pdfs/: _benchmark.py  _run_one.py
src/pdf_ocr_compress/: __init__.py  __main__.py  cli.py
src/pdf_ocr_compress/api/: __init__.py  errors.py  server.py  storage.py
src/pdf_ocr_compress/config/: __init__.py  settings.py
src/pdf_ocr_compress/core/: __init__.py  batch.py  batch_processor.py  compress.py  compression_profiles.py  detect.py  ocr.py  oversize.py  pipeline.py
src/pdf_ocr_compress/gui/: __init__.py  basic.py
src/pdf_ocr_compress/utils/: __init__.py  error_recovery.py  errors.py  file_utils.py  logging_config.py  system_check.py  temp_manager.py
tests/: api_smoke.sh  conftest.py  gui_smoke.md  test_api_async_process.py  test_api_errors.py  test_api_health.py  test_api_openapi.py  test_api_storage.py  test_batch.py  test_cli_batch.py  test_cli_config.py  test_compress.py  test_gs_precheck.py  test_gui_helpers.py  test_needs_ocr.py  test_oversize_policy.py  test_pipeline.py  test_pipeline_branches.py  test_process_pipeline.py  test_settings.py  test_surface_parity.py  test_text_coverage.py  test_text_fidelity.py  test_unique_name.py
tools/: check.py
