[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdf-ocr-compress"
version = "1.0.0"
description = "A cross-platform tool for adding OCR and compressing PDFs using Tesseract and Ghostscript"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "PDF OCR Compress Contributors"}
]
keywords = ["pdf", "ocr", "compression", "tesseract", "ghostscript"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Text Processing",
]
requires-python = ">=3.9"
dependencies = [
    "ocrmypdf>=15.0.0",
    "pikepdf>=8.0.0",
    "pdfminer.six>=20221105",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "streamlit>=1.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[project.scripts]
pdf-ocr = "pdf_ocr_compress.cli:main"
pdf-ocr-gui = "pdf_ocr_compress.gui:main_gui"

[project.urls]
Homepage = "https://github.com/bcfoltz/pdf-ocr-compress"
Repository = "https://github.com/bcfoltz/pdf-ocr-compress"
Issues = "https://github.com/bcfoltz/pdf-ocr-compress/issues"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "streamlit.*",
    "ocrmypdf.*",
    "pikepdf.*",
    "pdfminer.*",
    "cv2.*",
    "fitz.*",
    "PIL.*",
    "plotly.*",
    "fastapi.*",
    "uvicorn.*",
    "pydantic.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=src/pdf_ocr_compress",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
pythonpath = ["src"]