[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdf-ocr-compress"
version = "1.0.0"
description = "A cross-platform tool for adding OCR and compressing PDFs using Tesseract and Ghostscript"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "PDF OCR Compress Contributors"}
]
keywords = ["pdf", "ocr", "compression", "tesseract", "ghostscript"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Text Processing",
]
requires-python = ">=3.10"
dependencies = [
    # Core PDF processing
    "ocrmypdf>=16.0.0",
    "pikepdf>=9.0.0",
    "pdfminer.six>=20231228",
    # CLI + terminal output
    "typer>=0.12.0",
    "rich>=13.7.0",
    # Web GUI
    "streamlit>=1.36.0",
    # REST API
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
pdf-ocr = "pdf_ocr_compress.cli:main"
pdf-ocr-gui = "pdf_ocr_compress.gui:main_gui"

[project.urls]
Homepage = "https://github.com/bcfoltz/pdf-ocr-compress"
Repository = "https://github.com/bcfoltz/pdf-ocr-compress"
Issues = "https://github.com/bcfoltz/pdf-ocr-compress/issues"

[tool.uv]
dev-dependencies = [
    "black>=26.0.0",
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    # fastapi.testclient.TestClient depends on httpx; needed by the
    # Phase 4 API tests. Stable since httpx 0.24, pin floor at 0.27.
    "httpx>=0.27.0",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
# pycodestyle (E/W), pyflakes (F), isort (I), pyupgrade (UP), bugbear (B)
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]  # line length is black's job

[tool.ruff.lint.per-file-ignores]
# FastAPI convention: File(...) / Form(...) / Depends(...) as default args is by design
"src/pdf_ocr_compress/api/server.py" = ["B008"]
